stryker/force-app/main/default/objects/Shcedule_Matches__c/Shcedule_Matches__c.object-meta.xml
<CustomObject>
    <label>Shcedule Matches</label>
    <nameField>
        <displayFormat>s-{000}</displayFormat>
        <label>Shcedule Dates</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shcedule Matches</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>