stryker/force-app/main/default/objects/Shcedule_Matches__c/fields/Match_Date__c.field-meta.xml
<CustomField>
    <fullName>Match_Date__c</fullName>
    <label>Match Date</label>
    <type>Date</type>
</CustomField>