stryker/force-app/main/default/objects/Shcedule_Matches__c/fields/Match_Time__c.field-meta.xml
<CustomField>
    <fullName>Match_Time__c</fullName>
    <label>Match Time</label>
    <type>Time</type>
</CustomField>