stryker/force-app/main/default/objects/Shcedule_Matches__c/fields/Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Name__c</fullName>
    <label>Team Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>