stryker/force-app/main/default/objects/Shcedule_Matches__c/fields/Venue_Stadium__c.field-meta.xml
<CustomField>
    <fullName>Venue_Stadium__c</fullName>
    <label>Venue Stadium</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>